--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
