[2023-11-21] Utils/PageLoader 추가

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "psr-4": {
             "App\\": "app/",
             "Config\\": "config/",
-            "Database\\": "database/"
+            "Database\\": "database/",
+            "Utils\\": "utils/"
         }
     },
     "require": {
