--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^7.8",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "ext-mysqli": "*"
     }
 }
